--- a/_posts/2020-07-09-return.markdown
+++ b/_posts/2020-07-09-return.markdown
@@ -4,7 +4,7 @@ title: "Return to Libc Attacks"
 author: "Lavanya Singh"
 presenter: "Lavanya Singh"
 date:  2020-07-09
-categories: [ML, security, systems]
+categories: [systems, security]
 papers:
 - name: "On the Expressiveness of Return-into-libc Attacks"
   link: "https://people.engr.ncsu.edu/tkbletsc/pubs/TCRILC.pdf"
